--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-PunjabPolice/nbproject/private/
-PunjabPolice/build/
-PunjabPolice/nbbuild/
-PunjabPolice/nbdist/
-PunjabPolice/.nb-gradle/
+PunjabPolice/nbproject/private/*
+PunjabPolice/build/*
+PunjabPolice/nbbuild/*
+PunjabPolice/nbdist/*
+PunjabPolice/.nb-gradle/*
