Changed Query in secondLogin

--- a/PunjabPolice/nbproject/private/private.properties
+++ b/PunjabPolice/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.jcalendar-1.4.jar=/home/joker/Programs/Punjab Police Digital Portal
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\roboGOD\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/home/joker/.netbeans/8.2/build.properties
