--- a/PunjabPolice/nbproject/project.properties
+++ b/PunjabPolice/nbproject/project.properties
@@ -30,12 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\jCalendar\\lib\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
+file.reference.jcalendar-1.4.jar-1=../Executable JAR File - PPDP/lib/jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=../Executable JAR File - PPDP/lib/mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
     ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
